# dx_rangefinder_eval

./: .gitignore  README.md  creds.json.example  pyproject.toml
docs/: label_format.md
example_data/gt/: frame_001.json  frame_002.json
example_data/predictions/: frame_001.json  frame_002.json
prompts/: vibe-coding-session.md
src/eval_rangefinder/: __init__.py  metrics.py  schema.py  scorer.py  sheets.py  tui.py
tests/: test_metrics.py  test_scorer.py
